gccida/c3/handle_pragma_pack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/c-pragma.c:637:27: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
void  handle_pragma_pack( cpp_reader_0 *dummy) 
                          ^~~~~~~~~~~~
                          cpp_reader
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/c-pragma.c:640:20: error: expected expression
handle_pragma_pack::$7D59C9A71BAC084B57E9D6471866A4C9 action; // [rsp+1Ch] [rbp-24h] 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/c-pragma.c:645:1: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cpp_reader_0 *dummya; // [rsp+38h] [rbp-8h] 
^~~~~~~~~~~~
cpp_reader
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/c-pragma.c:657:1: error: use of undeclared identifier 'action'
action = set; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/c-pragma.c:657:10: error: use of undeclared identifier 'set'
action = set; 
         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/c-pragma.c:665:12: error: expected identifier or '('
 struct op = ( const char *)x->int_cst.int_cst.low; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/c-pragma.c:668:1: error: use of undeclared identifier 'action'
action = push; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/c-pragma.c:668:10: error: use of undeclared identifier 'push'
action = push; 
         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/c-pragma.c:677:1: error: use of undeclared identifier 'action'
action = pop; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/c-pragma.c:677:10: error: use of undeclared identifier 'pop'; did you mean 'op'?
action = pop; 
         ^~~
         op
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/c-pragma.c:639:13: note: 'op' declared here
const char *op; // [rsp+10h] [rbp-30h] 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/c-pragma.c:680:22: error: use of undeclared identifier 'action'
if ( tokena == 21 || action != push ) 
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/c-pragma.c:680:32: error: use of undeclared identifier 'push'
if ( tokena == 21 || action != push ) 
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/c-pragma.c:687:6: error: use of undeclared identifier 'action'
if ( action == push && c_lex( &x) != 21 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/c-pragma.c:687:16: error: use of undeclared identifier 'push'
if ( action == push && c_lex( &x) != 21 ) 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/c-pragma.c:691:6: error: use of undeclared identifier 'action'
if ( action == push ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/c-pragma.c:691:16: error: use of undeclared identifier 'push'
if ( action == push ) 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/c-pragma.c:701:6: error: use of undeclared identifier 'action'
if ( action != push ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/c-pragma.c:701:16: error: use of undeclared identifier 'push'
if ( action != push ) 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/c-pragma.c:712:1: error: use of undeclared identifier 'action'
action = set; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_pragma_pack/src/obj/c-pragma.o] Error 1
